--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ jobs:
   get-num-square:
     runs-on: ubuntu-latest
     name: Returns the number square
-    step:
+    steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Fetch num squared
